--- a/app/src/main/res/layout/alert_dialog.xml
+++ b/app/src/main/res/layout/alert_dialog.xml
@@ -1,44 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center"
-    android:padding="30dp"
-    android:background="@drawable/bg_corners">
+    android:background="@drawable/bg_corners"
+    android:gravity="left"
+    android:padding="70dp">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/no_wifi"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Oooops !!"
-        android:textStyle="bold"
-        android:fontFamily="monospace"
-        android:textColor="@android:color/white"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:src="@drawable/no_wifi" />
 
+    <TextView
+        android:layout_width="300dp"
+        android:layout_height="100dp"
+
+        android:layout_marginTop="90dp"
+        android:fontFamily="serif"
         android:text="No Internet Connection Found . \n Check Your Internet Connection"
         android:textAlignment="center"
-        android:fontFamily="serif"
-android:textColor="@android:color/white"
-        android:layout_marginTop="50dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="@android:color/white" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="monospace"
+        android:text="Oooops !!"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@android:color/white"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/btn_try_again"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_width="20dp"
+        android:layout_height="10dp"
+        android:layout_marginTop="30dp"
         android:background="#9C27B0"
+        android:baselineAligned="false"
         android:text="Try Again"
         android:textAllCaps="false"
-        android:textColor="@android:color/white"
-
-        />
+        android:textColor="@android:color/white" />
 </LinearLayout>
